syntax = "proto3";
option go_package = "./test_server";

import "validate/validate.proto";
import "github.com/maanasasubrahmanyam-sd/customValidation/validators.proto";

//protoc   -I ./interfaces/  -I ${GOPATH}/pkg/mod/github.com/envoyproxy/protoc-gen-validate@v0.1.0  --go_out="plugins=grpc:./generated"    --validate_out="lang=go:./generated" ./interfaces/test_server/*.proto
message SearchRequest {
  string query = 1 [(validate.rules).string = {
                      pattern:   "([A-Za-z]+) ([A-Za-z]+)*$",
                      max_bytes: 50,
                   }];
  string email_id= 2 [(validate.rules).string.email = true];
  int32 page_number = 3;  // Which page number do we want?
  int32 result_per_page = 4;  // Number of results to return per page.
}

/** SearchResponse represents the response of the Search
*/
message SearchResponse{
    string search_response = 1; // the search response
    int32 page_number = 2; // the page number
    int32 total_pages = 3; //total number of pages 

}

/** This is a test search service
*/
service SearchService {
  // Method to Search a test service
  rpc Search (SearchRequest) returns (SearchResponse) {}
}
